--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@900&family=Roboto&display=swap');
+
 body {
-    padding: 0;
     margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Archivo', sans-serif;
+}
+
