--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,30 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Archivo', sans-serif;
 }
 
+#hero-cover {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+#hero-image {
+    height: 100vh;
+    width: 100%;
+    background: #3a3a3a url(/assets/images/hero-image.jpg) no-repeat center center;
+    background-size: cover;
+    position: relative;
+}
+
+#hero-image-cover-opacity {
+    background-color: rgba(12, 12, 12, 0.65);
+    height: inherit;
+}
+
+#ready-for-war {
+    height: inherit;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
