--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
+/*google fonts import*/
 
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@900&family=Roboto&display=swap');
+
+/*general document styling*/
 
 body {
     margin: 0;
@@ -9,7 +12,40 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Archivo', sans-serif;
+    font-size: 1.6rem;
+    letter-spacing: 1px;
 }
+
+/*nav bar*/
+
+
+.navigation, .navigation a {
+    font-family: 'Archivo', sans-serif;
+    font-size: 1.6rem;
+    letter-spacing: 1px;
+    color: red;
+    background-color: black;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 50px;
+}
+
+.navigation ul {
+    width: 100%;
+}
+
+.navigation li{
+    background-color: black;
+    display: inline-block;
+}
+
+/*hero image*/
 
 #hero-cover {
     height: 100vh;
