--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,14 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     align-items: center;
 }
+
+#ready-for-war a {
+    background: red;
+    border: none;
+    height: auto;
+    width: 300px;
+    border-radius: 15px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+}
