--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,19 +8,26 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    background-color: black;
+    color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Archivo', sans-serif;
     font-size: 1.6rem;
     letter-spacing: 1px;
+    color: rgba(255, 0, 0, 0.6);
 }
 
 /*nav bar*/
 
+nav {
+    width: 50vw;
+}
+
 #gym-name {
     text-transform: uppercase;
-    border-right: 5px solid red;
+    border-right: 5px solid rgba(255, 0, 0, 0.6);
     padding-right: 35px;
 }
 
@@ -28,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Archivo', sans-serif;
     font-size: 1.6rem;
     letter-spacing: 1px;
-    color: red;
+    color: rgba(255, 0, 0, 0.6);
     background-color: black;
     text-decoration: none;
     margin: 0;
@@ -52,11 +59,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 nav a:hover{
-    border-bottom: 2px solid red;
+    border-bottom: 2px solid rgba(255, 0, 0, 0.6);
 }
 
 .active {
-    border-bottom: 2px solid red;
+    border-bottom: 2px solid rgba(255, 0, 0, 0.6);
 }
 
 /*hero image*/
@@ -104,16 +111,32 @@ nav a:hover{
     transition: box-shadow .5s;
 }
 
+#main-action h1 {
+    color: black;
+}
+
 #main-action:hover {
     background: rgba(0, 0, 0, 0.5);
     color: red;
     box-shadow: 0 0 10px red;
 }
 
-.main-content {
+#main-action:hover h1{
+    color: red;
+}
+
+.main-content-container {
+    height: 100vh;
+}
+
+.main-content-container h1 {
+    font-size: 1.75rem;
+}
+
+.main-content-container {
     display: flex;
-    align-items: center;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .main-content h1 {
