Added some content into the second main content box 'what we do' needs more content and styling with final box and footer to be completed media queries too. encountered some gitpod issues and will reslove them tonight picking up finishing the home page tommorrow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,12 +177,13 @@ hr {
     padding: 25px;
 }
 
-#who-are-we > h1 {
+#who-are-we > h1, #what-do-we-do > h1, #why-do-we-do-it > h1 {
     text-align: center;
 }
 
 #what-do-we-do {
     margin: auto;
+    text-align: center;
 }
 
 #why-do-we-do-it {
