--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,8 +223,22 @@ hr {
     border: 2px solid rgba(255, 0, 0, 0.6);
 }
 
+/*footer styling*/
 
 footer {
     height: 10vh;
     display: flex;
+}
+
+#footer-social-media {
+    list-style-type: none;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: rgba(255, 0, 0, 0.6)
+}
+ 
+#footer-social-media i{
+   font-size: 2rem;
 }
