Added main content background image and horizontal rule between main content and iframe map consisten with styling, onto responsiveness next

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,6 +153,12 @@ hr {
 }
 
 .main-content-container {
+    background: #3a3a3a url(../images/background-gym.jpg) no-repeat center center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.main-content-container {
     height: 100vh;
     box-sizing: border-box;
 }
