Added tablet screen size responsiveness with a media query targetting screen zizes with a max width of 950px, which styled the nav bar and main content with all other features remaining unchanged as they already adjust to the new screen size automatically due to responsive values being used originally

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,3 +248,25 @@ footer {
 #footer-social-media i{
    font-size: 2rem;
 }
+
+/*media queries for screen sizes with widths 950-800px*/
+
+@media screen and (max-width:950px) {
+    nav {
+        width: 100vw;
+    }
+
+    .main-content-container {
+    display: block;
+    height: fit-content;
+    padding:5px;
+    }
+
+    #who-are-we, #what-do-we-do, #why-do-we-do-it {
+        width: fit-content;
+        max-width: 80vw;
+        margin: 0 auto;
+        margin-bottom: 25px;
+        padding: 25px;
+    }
+}
