--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,9 +251,38 @@ footer {
 
 /*styling specifically for the lifts page*/
 
-#lifts-container {
-    height: 100%;
-    width: 100%;
+#background-image {
+    background: #3a3a3a url(../images/background-gym.jpg) no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+#lift-title {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.6 rem;
+    letter-spacing: 4px;
+    border-bottom: 2px solid rgba(255, 0, 0, 0.6);
+    border-top: 2px solid rgba(255, 0, 0, 0.6);
+    padding: 25px 50px;
+}
+
+#lift-container {
+    height: fit-content;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    text-align: center;
+}
+
+.lift-video > video {
+    width: 20%;
+
+}
+
+caption {
+    color: rgba(255, 0, 0, 0.6);
 }
 
 /*lift spotlight*/
