--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,7 +257,7 @@ footer {
     background-attachment: fixed;
 }
 
-#lift-title {
+.page-title {
     text-align: center;
     text-transform: uppercase;
     font-size: 1.6 rem;
@@ -269,21 +269,41 @@ footer {
 
 #lift-container {
     height: fit-content;
-    width: 100vw;
+    width: 90vw;
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content:center;
     text-align: center;
+    margin: 0 auto;
+}
+
+.lift-video {
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 0, 0, 0.6);
+    border-radius: 15px;
+    margin: 0 50px;
+    height: auto;
+    padding: 25px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.85)
 }
 
 .lift-video > video {
-    width: 20%;
+    width: 20vw;
+    display: block;
+}
 
+.lift-video > p {
+    padding-bottom: 5px;
 }
 
 caption {
     color: rgba(255, 0, 0, 0.6);
 }
+
+/*lift results table*/
+
+
 
 /*lift spotlight*/
 
