--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,8 @@ hr {
 
 .main-content-container {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-content h1 {
@@ -186,7 +188,7 @@ hr {
     border: 1px solid rgba(255, 0, 0, 0.6);
     border-radius: 15px;
     margin: 50px;
-    height: auto;
+    height: fit-content;
     padding: 25px;
     text-align: left;
     background-color: rgba(0, 0, 0, 0.85)
@@ -196,16 +198,8 @@ hr {
     text-align: center;
 }
 
-#who-are-we {
-    align-self: flex-start;
-}
-
 #what-do-we-do {
     margin: auto;
-}
-
-#why-do-we-do-it {
-    align-self: flex-end;
 }
 
 .red-large-strong-text {
@@ -501,9 +495,9 @@ maintaining desktop and tablet responsiveness*/
 @media screen and (max-width:1500px) {
 
     .main-content-container {
-    display: block;
-    height: fit-content;
-    padding:5px;
+        display: block;
+        height: fit-content;
+        padding:5px;
     }
 
     #who-are-we, #what-do-we-do, #why-do-we-do-it {
